# conversational-bi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: app.yaml  fe_agent.yaml  llm.yaml
config/data_agents/: customers.yaml  orders.yaml  products.yaml
config/database/: schema.yaml
config/prompts/data_agents/: customers_sql_generator.md  orders_sql_generator.md  products_sql_generator.md
config/prompts/fe_agent/: aggregator.md  router.md  system.md
scripts/: migrate_db.py  run_agents.py  run_data_agents.py  run_fe_agent.py  seed_data.py
src/conversational_bi/: __init__.py
src/conversational_bi/agents/base/: a2a_server.py
src/conversational_bi/agents/data_agents/: base_data_agent.py
src/conversational_bi/agents/data_agents/customers_agent/: agent.py
src/conversational_bi/agents/data_agents/orders_agent/: agent.py
src/conversational_bi/agents/data_agents/products_agent/: agent.py
src/conversational_bi/agents/orchestrator/: agent.py  aggregator.py  discovery.py
src/conversational_bi/common/: config.py  exceptions.py  sql_validator.py
src/conversational_bi/config/: __init__.py  loader.py
src/conversational_bi/database/: connection.py
src/conversational_bi/database/migrations/: __init__.py  init_schema.sql  runner.py
src/conversational_bi/database/migrations/versions/: 001_initial_schema.sql
src/conversational_bi/fe_agent/: __init__.py  agent.py
src/conversational_bi/fe_agent/tools/: __init__.py  a2a_client.py  discovery.py
src/conversational_bi/llm/: openai_client.py
src/conversational_bi/llm/prompts/: __init__.py  sql_generation.py
src/conversational_bi/ui/: app.py
tests/: conftest.py
tests/integration/: test_a2a_communication.py  test_run_data_agents_windows.py
tests/unit/: test_config_loader.py  test_data_agents.py  test_fe_agent.py  test_migrations.py  test_sql_validator.py
